PharmaDemo/src/objects/Purchase_Requisition_Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Requisition__c</fullName>
        <label>Purchase Requisition</label>
        <referenceTo>Purchase_Requisition__c</referenceTo>
        <relationshipLabel>Purchase Requisition Items</relationshipLabel>
        <relationshipName>Purchase_Requisition_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Unit_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measure_Code__c</fullName>
        <label>Unit Of Measure Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Purchase Requisition Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Service_Code__c</columns>
        <columns>Service__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRI-{000000}</displayFormat>
        <label>Purchase Requisition Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Requisition Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>